--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
  /*style navbar*/
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
 
  :root {
    --navbar-bg-color: #1C052B;
@@ -8,9 +10,11 @@
  }
 
  * {
+  font-family: "Roboto", sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
+
  }
 
  html {
@@ -22,10 +26,8 @@
  }
 
  body {
-   @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
    height: 100vh;
    font-size: 20px;
-   font-family: 'Amatic SC', cursive;
    line-height: 1.6;
  }
 
@@ -214,6 +216,9 @@
 
 
  /*style home*/
+ h1{
+  font-size: 25px;
+ }
  a:link {
    color: rgb(255, 255, 255);
  }
