--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,5 @@
  /*style navbar*/
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-
- :root {
-   --navbar-bg-color: #1C052B;
-   --navbar-text-color: hsl(0, 0%, 85%);
-   --navbar-text-color-focus: white;
-   --navbar-bg-contrast: #1C052B;
- }
 
  * {
   font-family: "Roboto", sans-serif;
@@ -17,242 +9,26 @@
 
  }
 
- html {
-   font-size: 20px;
- }
 
- .back {
-   background-color: rgb(40, 11, 57);
- }
 
- body {
-   height: 100vh;
-   font-size: 20px;
-   line-height: 1.6;
- }
-
- .container {
+ /* .container {
    max-width: 1000px;
    padding-left: 1.4rem;
    padding-right: 1.4rem;
    margin-left: auto;
    margin-right: auto;
- }
+ } */
 
- #navbar {
-   --navbar-height: 64px;
-   height: var(--navbar-height);
-   background-color: var(--navbar-bg-color);
-   left: 0;
-   right: 0;
-   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
- }
-
- .navbar-container {
-   display: flex;
-   justify-content: space-between;
-   height: 100%;
-   align-items: center;
- }
-
- .navbar-item {
-   margin: 0.4em;
-   width: 100%;
- }
-
- .home-link,
- .navbar-link {
-   color: var(--navbar-text-color);
-   text-decoration: none;
-   display: flex;
-   font-weight: 400;
-   align-items: center;
- }
-
- .home-link:is(:focus, :hover) {
-   color: var(--navbar-text-color-focus);
- }
-
- .navbar-link {
-   justify-content: center;
-   width: 100%;
-   padding: 0.4em 0.8em;
-   border-radius: 5px;
- }
-
- .navbar-link:is(:focus, :hover) {
-   color: var(--navbar-text-color-focus);
-   background-color: var(--navbar-bg-contrast);
- }
-
- .navbar-logo {
-   background-color: var(--navbar-text-color-focus);
-   border-radius: 50%;
-   width: 30px;
-   height: 30px;
-   margin-right: 0.5em;
- }
-
- #navbar-toggle {
-   cursor: pointer;
-   border: none;
-   background-color: transparent;
-   width: 40px;
-   height: 40px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
- }
-
- .icon-bar {
-   display: block;
-   width: 25px;
-   height: 4px;
-   margin: 2px;
-   background-color: var(--navbar-text-color);
- }
-
- #navbar-toggle:is(:focus, :hover) .icon-bar {
-   background-color: var(--navbar-text-color-focus);
- }
-
- #navbar-toggle[aria-expanded="true"] .icon-bar:is(:first-child, :last-child) {
-   position: absolute;
-   margin: 0;
-   width: 30px;
- }
-
- #navbar-toggle[aria-expanded="true"] .icon-bar:first-child {
-   transform: rotate(45deg);
- }
-
- #navbar-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
-   opacity: 0;
- }
-
- #navbar-toggle[aria-expanded="true"] .icon-bar:last-child {
-   transform: rotate(-45deg);
- }
-
- #navbar-menu {
-   position: fixed;
-   top: var(--navbar-height);
-   bottom: 0;
-   opacity: 0;
-   visibility: hidden;
-   left: 0;
-   right: 0;
- }
-
- #navbar-toggle[aria-expanded="true"]+#navbar-menu {
-   background-color: rgba(0, 0, 0, 0.4);
-   opacity: 1;
-   visibility: visible;
- }
-
- .navbar-links {
-   list-style: none;
-   position: absolute;
-   background-color: var(--navbar-bg-color);
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   left: 0;
-   right: 0;
-   margin: 1.4rem;
-   border-radius: 5px;
-   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
- }
-
- #navbar-toggle[aria-expanded="true"]+#navbar-menu .navbar-links {
-   padding: 1em;
- }
-
- @media screen and (min-width: 700px) {
-
-   #navbar-toggle,
-   #navbar-toggle[aria-expanded="true"] {
-     display: none;
-   }
-
-   #navbar-menu,
-   #navbar-toggle[aria-expanded="true"] #navbar-menu {
-     visibility: visible;
-     opacity: 1;
-     position: static;
-     display: block;
-     height: 100%;
-   }
-
-   .navbar-links,
-   #navbar-toggle[aria-expanded="true"] #navbar-menu .navbar-links {
-     margin: 0;
-     padding: 0;
-     box-shadow: none;
-     position: static;
-     flex-direction: row;
-     width: 100%;
-     height: 100%;
-   }
- }
 
  /*style body*/
- html,
- body {
-   font-size: 16px;
-
-   width: 100%;
-
-   margin: 0;
-   padding: 0;
- }
-
- body {
-   background: #0B0524;
- }
-
+ 
 
 
 
  /*style home*/
- h1{
-  font-size: 25px;
- }
- a:link {
-   color: rgb(255, 255, 255);
- }
-
- /* link que foi visitado */
- a:visited {
-   color: white;
- }
-
- /* mouse over */
- a:hover {
-   color: #826099;
- }
-
- /* link selecionado */
- a:active {
-   color: #1C052B;
- }
 
  @media screen {}
 
- .text-center {
-   color: white;
-   margin: 100px auto 0px auto;
-   display: block;
- }
-
- .text-align-center {
-
-   text-align: center;
-   margin-top: 100px;
-   margin: auto;
-
- }
 /* style buscar */
 
 .box-search{
@@ -401,10 +177,7 @@ outline: 0;
    transform-origin: bottom left;
  }
 
- .h2-clie-register {
-   text-align: center;
-   margin-top: 20px;
- }
+ 
 
  .label-edit-clie {
    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
@@ -624,197 +397,6 @@ select#cars {
    transform-origin: bottom left;
  }
 
- html {
-   height: 100%;
- }
-
- body {
-   margin: 0;
-   padding: 0;
-   font-family: 'Amatic SC', cursive;
-
- }
-
- .botao {
-   background: transparent;
-   border: none;
-   outline: none;
-   display: block;
-   height: 15x;
-   width: 50px;
-   cursor: pointer;
-   color: white;
- }
-
- .login-box {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   width: 400px;
-   padding: 40px;
-   transform: translate(-50%, -50%);
-   background: #2C153C;
-   box-sizing: border-box;
-   box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
-   border-radius: 10px;
- }
-
- .login-box h2 {
-   margin: 0 0 30px;
-   padding: 0;
-   color: #fff;
-   text-align: center;
- }
-
- .login-box .user-box {
-   position: relative;
- }
-
- .login-box .user-box input {
-   width: 100%;
-   padding: 10px 0;
-   font-size: 20px;
-   color: #fff;
-   margin-bottom: 30px;
-   border: none;
-   border-bottom: 1px solid #fff;
-   outline: none;
-   background: transparent;
- }
-
- .login-box .user-box label {
-   position: absolute;
-   top: 0;
-   left: 0;
-   padding: 10px 0;
-   font-size: 20px;
-   color: #fff;
-   pointer-events: none;
-   transition: .5s;
- }
-
- .login-box .user-box input:focus~label,
- .login-box .user-box input:valid~label {
-   top: -20px;
-   left: 0;
-   color: #B09ABF;
-   font-size: 20px;
- }
-
- .login-box form a {
-   position: relative;
-   display: inline-block;
-   padding: 10px 20px;
-   color: #B09ABF;
-   font-size: 20px;
-   text-decoration: none;
-   text-transform: uppercase;
-   overflow: hidden;
-   transition: .5s;
-   margin-top: 40px;
-   letter-spacing: 4px
- }
-
- .login-box a:hover {
-   background: #9B71B7;
-   color: #fff;
-   border-radius: 5px;
-   box-shadow: 0 0 5px #5A1786,
-     0 0 25px #5A1786,
-     0 0 50px #5A1786,
-     0 0 100px #5A1786;
- }
-
- .login-box a span {
-   position: absolute;
-   display: block;
- }
-
- .login-box a span:nth-child(1) {
-   top: 0;
-   left: -100%;
-   width: 100%;
-   height: 2px;
-   background: #512D69;
-   animation: btn-anim1 1s linear infinite;
- }
-
- @keyframes btn-anim1 {
-   0% {
-     left: -100%;
-   }
-
-   50%,
-   100% {
-     left: 100%;
-   }
- }
-
- .login-box a span:nth-child(2) {
-   top: -100%;
-   right: 0;
-   width: 2px;
-   height: 100%;
-   background: #5A1786;
-   animation: btn-anim2 1s linear infinite;
-   animation-delay: .25s
- }
-
- @keyframes btn-anim2 {
-   0% {
-     top: -100%;
-   }
-
-   50%,
-   100% {
-     top: 100%;
-   }
- }
-
- .login-box a span:nth-child(3) {
-   bottom: 0;
-   right: -100%;
-   width: 100%;
-   height: 2px;
-   background: #9A00FF;
-   animation: btn-anim3 1s linear infinite;
-   animation-delay: .5s
- }
-
- @keyframes btn-anim3 {
-   0% {
-     right: -100%;
-   }
-
-   50%,
-   100% {
-     right: 100%;
-   }
- }
-
- .login-box a span:nth-child(4) {
-   bottom: -100%;
-   left: 0;
-   width: 2px;
-   height: 100%;
-   background: #5A1786;
-   animation: btn-anim4 1s linear infinite;
-   animation-delay: .75s
- }
-
- @keyframes btn-anim4 {
-   0% {
-     bottom: -100%;
-   }
-
-   50%,
-   100% {
-     bottom: 100%;
-   }
- }
-
-
- /*Fte*/
  html {
    height: 100%;
  }
