--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -17,7 +17,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: #280B39;
+  background-color: #357ABD;
   padding: 20px;
   color: white;
   text-align: center;
