--- a/assets/css/registerclient.css
+++ b/assets/css/registerclient.css
@@ -1,96 +1,155 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
+
+body, html {
+  height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Quicksand', sans-serif;
+    background: linear-gradient(45deg, #16171a, #292e35);
+    color: #FFFFFF;
+    min-height: 100%;
+    background-attachment: fixed;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    background-color: #141414;
+}
+
+.logo {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    color: #357ABD;
+    text-decoration: none;
+}
+
+.login-btn {
+    background-color: #357ABD;
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: #FFFFFF;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 70px); /* Ajusta a altura do main excluindo a altura do header */
+}
+
 .container {
-  width: 100%;
-  max-width: 500px;
-  padding: 20px;
+    width: 100%;
+    max-width: 500px;
+    padding: 20px;
 }
 
 .login-box {
-  width: 100%;
-  padding: 40px;
-  background: #2C153C;
-  box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
-  border-radius: 10px;
-  box-sizing: border-box;
+    width: 100%;
+    padding: 40px;
+    background: #16171a;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    box-sizing: border-box;
+    text-align: center;
 }
 
 .login-box h2 {
-  margin: 0 0 30px;
-  color: #fff;
-  text-align: center;
+    margin: 0 0 30px;
+    color: #357ABD;
+    text-align: center;
 }
 
 .user-box {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
+    text-align: left;
 }
 
 .user-box label {
-  display: block;
-  color: #fff;
-  font-size: 14px;
+    display: block;
+    color: #e9e9e9;
+    font-size: 14px;
+    margin-bottom: 5px;
 }
 
 .user-box input {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  color: #fff;
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #fff;
-  outline: none;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    color: #e9e9e9;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #357ABD;
+    outline: none;
 }
 
 .horarioentrada, .horariosaida {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  color: #fff;
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #fff;
-  outline: none;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    color: #e9e9e9;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #357ABD;
+    outline: none;
 }
 
 button.btn {
-  width: 100%;
-  padding: 10px;
-  background-color: #35114c;
-  color: whitesmoke;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition: background-color .5s ease;
+    width: 100%;
+    padding: 10px;
+    background-color: #357ABD;
+    color: whitesmoke;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: background-color 0.5s ease;
 }
 
 button.btn:hover {
-  background-color: #240624;
-  color: whitesmoke;
+    background-color: #0a32a8;
+    color: whitesmoke;
 }
+
 .msg-err {
-
-  height: 30px;
-  align-items: center;
-  font-weight: 600;
-  border-radius: 8px;
-  margin: auto;
-  color: red;
-  text-align: center;
-  width: 420px;
-  margin: 10px auto;
-  padding: 10px;
-  background-color: rgba(250, 128, 114, .3);
-  border-radius: 1px solid rgb(165, 42, 42);
-
+    height: 30px;
+    align-items: center;
+    font-weight: 600;
+    border-radius: 8px;
+    margin: auto;
+    color: red;
+    text-align: center;
+    width: 420px;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: rgba(250, 128, 114, 0.3);
+    border-radius: 1px solid rgb(165, 42, 42);
 }
 
 .msg-sucess {
-  text-align: center;
-  color: whitesmoke;
-  width: 420px;
-  margin: 10px auto;
-  background-color: rgba(50, 205, 50, .3);
-  border-radius: 1px solid rgb(34, 139, 34);
+    text-align: center;
+    color: whitesmoke;
+    width: 420px;
+    margin: 10px auto;
+    background-color: rgba(50, 205, 50, 0.3);
+    border-radius: 1px solid rgb(34, 139, 34);
 }
