--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -33,6 +33,46 @@ nav {
 }
 
 
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px;
+  background-color: #141414;
+} 
+
+
+header .logo, header nav a {
+  color: white;
+  text-decoration: none;
+}
+
+header nav a:hover {
+  color: #7589c5d2;
+} */
+
+.logo {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+}
+
+nav ul li a {
+  color: #357ABD;
+  text-decoration: none;
+}
+
 
 /* Media Queries for Responsiveness */
 @media (max-width: 768px) {
