--- a/assets/css/horario.css
+++ b/assets/css/horario.css
@@ -1,115 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
+
+body, html {
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(45deg, #16171a, #292e35);
+
+  color: #FFFFFF;
+  background-attachment: fixed;
+
+  height: 100%;
+  min-height: 100%;
+}
+
+.text-center {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.valor{
+  text-align: center;
+  font-size: 20px;
+  color: #007aff;
+
+}
+h1 {
+  font-size: 30px;
+  color: #007aff;
+  margin-bottom: 40px;
+}
+
+.table-container {
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+}
+
 .table-horario {
-    text-align: center;
-    width: 10px;
-    margin: auto;
-    font-size: 16px;
-  
-    font-family: 'Ropa Sans', sans-serif;
-    margin-top: 50px;
-    color: #523b5f;
-   
-  
-  }
-  
-  .table-horario,
-  .th-horario,
-  .td-horario {
-    border: 1px solid #E0D9FF;
-  }
-  
-  .table-borderless {
-  
-    width: 280px;
-  
-    margin: auto;
-  }
-  td.td-horario{
-  background-color: #2e183a;
-  
-  }
-  button {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #2c2c2e;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
 
-    margin: auto;
-    position: relative;
+.th-horario, .td-horario {
+  padding: 15px;
+  text-align: center;
+  border-bottom: 1px solid #3a3a3c;
 
-    padding: 0.8em 1em;
-    outline: none;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border: none;
-    text-transform: uppercase;
-    background-color: #1c052b;
-    border-radius: 10px;
-    color: #fff;
-    font-weight: 300;
-    font-size: 18px;
-    font-family: inherit;
-    z-index: 0;
-    overflow: hidden;
-    transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-  }
+}
 
-  button:hover {
-    animation: sh0 0.5s ease-in-out both;
-  }
+/* .th-horario {
+  background-color: #007aff;
+  color: #ffffff;
+} */
 
-  @keyframes sh0 {
-    0% {
-      transform: rotate(0deg) translate3d(0, 0, 0);
-    }
 
-    25% {
-      transform: rotate(7deg) translate3d(0, 0, 0);
-    }
 
-    50% {
-      transform: rotate(-7deg) translate3d(0, 0, 0);
-    }
+.button-container {
+  margin-top: 20px;
+  text-align: center;
+}
 
-    75% {
-      transform: rotate(1deg) translate3d(0, 0, 0);
-    }
+button {
+  color: #ffffff;
+  background-color: #007aff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 
-    100% {
-      transform: rotate(0deg) translate3d(0, 0, 0);
-    }
-  }
-
-  button:hover span {
-    outline: none;
-    animation: storm 0.7s ease-in-out both;
-    animation-delay: 0.06s;
-  }
-
-  button::before,
-  button::after {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: #fff;
-    opacity: 0;
-    transition: transform 0.15s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.15s cubic-bezier(0.02, 0.01, 0.47, 1);
-    z-index: -1;
-    transform: translate(100%, -25%) translate3d(0, 0, 0);
-  }
-
-  button:hover::before,
-  button:hover::after {
-    opacity: 0.15;
-    transition: transform 0.2s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
-  }
-
-  button:hover::before {
-    transform: translate3d(50%, 0, 0) scale(0.9);
-  }
-
-  button:hover::after {
-    transform: translate(50%, 0) scale(1.1);
-  }
+button:hover {
+  background-color: #005bb5;
+}
