--- a/assets/css/registercar.css
+++ b/assets/css/registercar.css
@@ -1,50 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
 
 body, html {
-    font-family: 'Quicksand', sans-serif;
+    height: 100%;
     margin: 0;
     padding: 0;
+    font-family: 'Quicksand', sans-serif;
     background: linear-gradient(45deg, #16171a, #292e35);
     color: #FFFFFF;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    min-height: 100%;
+    background-attachment: fixed;
 }
 
-header {
-    width: 100%;
-    background-color: #1C1C1C;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-}
 
-.logo {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: #357ABD;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 15px;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
-    color: #357ABD;
-    text-decoration: none;
-    font-weight: bold;
-}
 
 .login-btn {
     background-color: #357ABD;
@@ -52,14 +19,7 @@ nav ul li a {
     border-radius: 5px;
     color: #FFFFFF;
     text-decoration: none;
-    font-weight: bold;
-}
 
-main {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .container.vehicle-form {
@@ -72,7 +32,7 @@ main {
 .login-box {
     width: 100%;
     padding: 40px;
-    background: #1C1C1C;
+    background: #16171a;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 10px;
     box-sizing: border-box;
@@ -91,7 +51,7 @@ main {
 .user-box label, .select-group label {
     display: block;
     margin-bottom: 10px;
-    color: #357ABD;
+    color: #ffffff;
     font-size: 14px;
 }
 
@@ -99,7 +59,7 @@ main {
     width: 100%;
     padding: 10px;
     font-size: 16px;
-    color: #fff;
+    color: #357ABD;
     background: transparent;
     border: none;
     border-bottom: 1px solid #357ABD;
@@ -110,8 +70,8 @@ main {
 }
 
 .select-group select {
-    color: #fff;
-    background: #1C1C1C;
+    color: #357ABD;
+    background: #16171a;
     border-radius: 5px;
 }
 
@@ -121,7 +81,7 @@ main {
 
 .select-group option {
     font-size: 16px;
-    color: black;
+    color: #357ABD;
     background: #fff;
 }
 
@@ -140,30 +100,36 @@ main {
 }
 
 .vehicle-form button.btn:hover {
-    background-color: #240624;
+    background-color: #0a32a8;
     color: whitesmoke;
 }
 
 .msg-err {
-    height: 30px;
+    height: 20px;
     align-items: center;
     font-weight: 600;
     border-radius: 8px;
     margin: auto;
     color: red;
     text-align: center;
-    width: 420px;
-    margin: 10px auto;
-    padding: 10px;
+    width: 300px;
+    margin: 20px auto;
+    padding: 5px;
     background-color: rgba(250, 128, 114, .3);
     border-radius: 1px solid rgb(165, 42, 42);
 }
 
 .msg-sucess {
-    text-align: center;
-    color: whitesmoke;
-    width: 420px;
-    margin: 10px auto;
-    background-color: rgba(50, 205, 50, .3);
+    height: 20px;
+  align-items: center;
+  font-weight: 600;
+  border-radius: 8px;
+  margin: auto;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  width: 300px;
+  margin: 20px auto;
+  padding: 5px;
+    background-color: rgba(50, 205, 50, 0.3);
     border-radius: 1px solid rgb(34, 139, 34);
 }
