--- a/assets/css/registerclient.css
+++ b/assets/css/registerclient.css
@@ -11,49 +11,15 @@ body, html {
     background-attachment: fixed;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    background-color: #141414;
-}
-
-.logo {
-    font-size: 1.5em;
-    font-weight: bold;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 15px;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
-    color: #357ABD;
-    text-decoration: none;
-}
 
 .login-btn {
     background-color: #357ABD;
     padding: 10px 15px;
     border-radius: 5px;
     color: #FFFFFF;
+    text-decoration: none;
 }
 
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 70px); /* Ajusta a altura do main excluindo a altura do header */
-}
 
 .container {
     width: 100%;
@@ -68,7 +34,8 @@ main {
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     box-sizing: border-box;
-    text-align: center;
+
+
 }
 
 .login-box h2 {
@@ -93,7 +60,7 @@ main {
     width: 100%;
     padding: 10px;
     font-size: 16px;
-    color: #e9e9e9;
+    color: #357ABD;
     background: transparent;
     border: none;
     border-bottom: 1px solid #357ABD;
@@ -131,25 +98,35 @@ button.btn:hover {
 }
 
 .msg-err {
-    height: 30px;
+    height: 20px;
     align-items: center;
     font-weight: 600;
     border-radius: 8px;
     margin: auto;
     color: red;
     text-align: center;
-    width: 420px;
-    margin: 10px auto;
-    padding: 10px;
-    background-color: rgba(250, 128, 114, 0.3);
+    width: 300px;
+    margin: 20px auto;
+    padding: 5px;
+    background-color: rgba(250, 128, 114, .3);
     border-radius: 1px solid rgb(165, 42, 42);
 }
 
+
+
+
+
 .msg-sucess {
-    text-align: center;
-    color: whitesmoke;
-    width: 420px;
-    margin: 10px auto;
+  height: 20px;
+  align-items: center;
+  font-weight: 600;
+  border-radius: 8px;
+  margin: auto;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  width: 300px;
+  margin: 20px auto;
+  padding: 5px;
     background-color: rgba(50, 205, 50, 0.3);
     border-radius: 1px solid rgb(34, 139, 34);
 }
