--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,11 +1,13 @@
 /* Global Styles */
 body, html {
+  height: 100%;
+  min-height: 100%;
   @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
   font-family: 'Quicksand', sans-serif;
   margin: 0;
   padding: 0;
   height: 100%;
-
+  background-attachment: fixed;
   background: linear-gradient(45deg, #16171a, #292e35);
   color: white;
 }
