--- a/assets/css/style_login.css
+++ b/assets/css/style_login.css
@@ -1,22 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
 
 
-body {
-  background: #1c1c1e; /* Cor de fundo escura */
-  font-family: 'Quicksand', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+body, html {
+  height: 100%;
   margin: 0;
+  padding: 0;
+  font-family: 'Quicksand', sans-serif;
+  background: #1c1c1e;
+  color: #FFFFFF;
+  min-height: 100%;
+  background-attachment: fixed;
 }
 
 .login-page {
   width: 360px;
-  /* padding: 8% 0 0; */
-  margin: auto;
+   padding: 8% 0 0;
+    margin: auto;
 }
 
 .form {
@@ -24,6 +23,7 @@ body {
   border-radius: 16px;
   background: #2c2c2e; /* Fundo cinza escuro */
   padding: 45px;
+  box-sizing: border-box;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
