--- a/assets/css/editarusuarios.css
+++ b/assets/css/editarusuarios.css
@@ -7,6 +7,9 @@ body, html{
     font-family: 'Quicksand', sans-serif;
     background-attachment: fixed;
 }
+
+
+
 .container-editar {
     background: #16171a;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
@@ -16,16 +19,15 @@ body, html{
     text-align: center;
     margin: 50px auto; 
     position: relative; 
-
 }
 
-.h2-editar {
+.h2-edit-user {
     margin-bottom: 20px;
     font-size: 24px;
     color: #357ABD;
 }
 
-.form-editar {
+.form-edit-user {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -37,12 +39,12 @@ body, html{
     text-align: left;
 }
 
-.label-editar {
+.label-edit-user {
     font-size: 14px;
     margin-bottom: 5px;
 }
 
-.input-editar {
+.input-edit-user {
     margin-top: 20px;
     height: 44px;
     background-color: #16171a; /* Input cinza mais claro */
@@ -54,7 +56,7 @@ body, html{
     color: #007bff;
 }
 
-.button-editar {
+.button-edit-user {
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -64,9 +66,10 @@ body, html{
     font-size: 14px;
 }
 
-.button-editar:hover {
+.button-edit-user:hover {
     background-color: #0056b3;
 }
+
 .button-voltar{
     text-align: center;
     padding: 10px;
@@ -82,5 +85,3 @@ body, html{
 .button-voltar:hover {
     background-color: #0056b3;
 }
-
-
