--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,13 +1,19 @@
+.img{
+  width: 40px;
+}
 nav {
+  text-decoration: none;
   display: flex;
   align-items: center;
 }
 .nav-links {
+  text-decoration: none;
   list-style: none;
   display: flex;
   gap: 15px;
 }
 .nav-links li {
+  text-decoration: none;
   display: inline;
 }
 .nav-links li a {
@@ -15,11 +21,13 @@ nav {
   text-decoration: none;
 }
 .login-btn {
+  text-decoration: none;
   background-color: #194f88;
   padding: 10px 15px;
   border-radius: 5px;
 }
 .hamburger {
+  text-decoration: none;
   display: none;
   flex-direction: column;
   cursor: pointer;
@@ -34,27 +42,23 @@ nav {
 
 
 header {
+
+  text-decoration: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px;
+  padding: 15px;
   background-color: #141414;
 } 
 
 
-header .logo, header nav a {
-  color: white;
-  text-decoration: none;
-}
+
 
 header nav a:hover {
+  text-decoration: none;
   color: #7589c5d2;
 } */
 
-.logo {
-  font-size: 1.5em;
-  font-weight: bold;
-}
 
 nav ul {
   list-style: none;
