--- a/assets/css/listarmovimento.css
+++ b/assets/css/listarmovimento.css
@@ -11,7 +11,8 @@ body, html {
     flex-direction: column;
 }
 
-.box-voltar {
+.box-search {
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
     gap: 0.5%;
@@ -20,6 +21,7 @@ body, html {
 }
 
 input[type="search"].form-control {
+ 
     background-color: #16171a;
     color: white;
     border: 1px solid #555;
@@ -35,51 +37,30 @@ input[type="search"].form-control:focus {
 }
 
 .btn.btn-dark {
-    background-color: #007aff;
+    padding: 10px;
     border: none;
-    color: white;
-    padding: 10px 20px;
     border-radius: 10px;
+    background-color: #007bff;
+    color: white;
     cursor: pointer;
+    font-size: 14px;
 }
 
 .btn.btn-dark:hover {
     background-color: #0056b3;
 }
 
-.body-clie-listar {
-    background: linear-gradient(45deg, #16171a, #292e35);
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 100;
-    width: 100%;
-}
 
-.container-clie {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
 
-.table-clie {
+table {
+    margin: auto;
     margin-top: 50px;
-    width: 100%;
     border-collapse: collapse;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
 
-.thead-clie-list {
-    background-color: #007aff;
-}
-
-.th-clie-listar, .td-clie-listar {
-    font-size: 15px;
-    padding: 15px;
-    background-color: #007aff;
-    color: #ffffff;
-    text-align: center;
-}
 
 th {
     font-size: 15px;
@@ -114,4 +95,40 @@ td a {
         font-size: 12px;
         padding: 8px;
     }
+}
+
+.form-date {
+    font-family: 'Quicksand', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.form-date input {
+    font-family: 'Quicksand', sans-serif;
+    height: 44px;
+    background-color: #2f2f30; /* Input cinza mais claro */
+    border-radius: .5rem;
+    padding: 0 1rem;
+    border: 2px solid transparent;
+    font-size: 1rem;
+    color: #ffffff;
+}
+
+.form-date input[type="submit"],
+.form-date input[type="button"] {
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.form-date input[type="submit"]:hover,
+.form-date input[type="button"]:hover {
+    background-color: #0056b3;
 }
