--- a/assets/css/listarclientes.css
+++ b/assets/css/listarclientes.css
@@ -9,6 +9,8 @@ body, html {
     height: 100%;
     display: flex;
     flex-direction: column;
+    text-align: center;
+    background-attachment: fixed;
 }
 
 .box-voltar {
