--- a/assets/css/listarmovimento.css
+++ b/assets/css/listarmovimento.css
@@ -9,6 +9,8 @@ body, html {
     height: 100%;
     display: flex;
     flex-direction: column;
+    text-align: center;
+    background-attachment: fixed;
 }
 
 .box-search {
@@ -19,6 +21,15 @@ body, html {
     margin-top: 50px;
     padding: 10px;
 }
+.box-voltar {
+    display: flex;
+    justify-content: center;
+    gap: 0.5%;
+    margin-top: 50px;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
 
 input[type="search"].form-control {
  
@@ -50,7 +61,11 @@ input[type="search"].form-control:focus {
     background-color: #0056b3;
 }
 
-
+.table-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
 
 table {
     margin: auto;
