--- a/assets/css/movimento.css
+++ b/assets/css/movimento.css
@@ -68,6 +68,7 @@ body, html {
 }
 
 .button-index-movi {
+    font-family: 'Quicksand', sans-serif;
     background-color: #007aff;
     color: white;
     height: 40px;
@@ -81,6 +82,7 @@ body, html {
 }
 
 .button-index-movi:hover {
+    font-family: 'Quicksand', sans-serif;
     background-color: #005bb5;
 }
 
